--- a/document/Bibliography.bib
+++ b/document/Bibliography.bib
@@ -546,7 +546,7 @@ title = {Software Architecture Patterns},
 	title = {{Sitio Oficial de Kotlin}},
 	journal = {Flutter},
 	year = {2022},
-	month = sepoct
+	month = oct,
 	note = {[Online; accessed 4. oct. 2022]},
 	url = {https://kotlinlang.org}
 }
