--- a/document/Bibliography.bib
+++ b/document/Bibliography.bib
@@ -367,7 +367,7 @@ note = {(Accessed on 11/23/2022)}
 
 %_Citas11
 @misc{apMov,
-	title = {{Aplicación movil promueve labor de bienestar animal en Cuba}},
+	title = {{Aplicación móvil promueve labor de bienestar animal en Cuba}},
 	journal = {Docker},
 	year = {2022},
 	month = sep,
@@ -377,7 +377,7 @@ note = {(Accessed on 11/23/2022)}
 
 %_Citas12
 @misc{cubDis,
-	title = {{Cuba: disponible aplicación movil sobre bienestar animal}},
+	title = {{Cuba: disponible aplicación móvil sobre bienestar animal}},
 	journal = {Docker},
 	year = {2022},
 	month = sep,
@@ -598,4 +598,42 @@ title = {Software Architecture Patterns},
 	month = sep,
 	note = {[Online; accessed 2. sep. 2022]},
 	url = {https://appadvice.com/app/vitusvet-pet-medical-records/955252538}
+}
+
+%_Citas22
+@misc{xama,
+	title = {Sitio oficial de Xamarin},
+	journal = {HC},
+	year = {2022},
+	month = sep,
+	note = {[Online; accessed 1. sep. 2022]},
+	url = {https://dotnet.microsoft.com/apps/xamarin}
+}
+
+%_Citas22
+@misc{net,
+	title = {Sitio oficial de .Net},
+	journal = {HC},
+	year = {2022},
+	month = sep,
+	note = {[Online; accessed 1. sep. 2022]},
+	url = {https://dotnet.microsoft.com}
+}
+
+@misc{cblite,
+	title = {Sitio oficial de Couchbase},
+	journal = {HC},
+	year = {2022},
+	month = sep,
+	note = {[Online; accessed 1. sep. 2022]},
+	url = {https://developer.couchbase.com}
+}
+
+@misc{offDT,
+	title = {Offline data transfer in Android},
+	journal = {HC},
+	year = {2022},
+	month = oct,
+	note = {[Online; accessed 1. sep. 2022]},
+	url = {https://www.tothenew.com/blog/offline-data-transfer-in-android}
 }
