--- a/document/MainMatter/Introduction.tex
+++ b/document/MainMatter/Introduction.tex
@@ -43,7 +43,7 @@ Según Giménez \brackcite{gimenez2014animales} la sociedad demanda, cada día m
 
 En el caso de Cuba, fue aprobado en febrero del año 2021 el Decreto-Ley No.31 de Bienestar Animal, lo cual constituye un paso de avance en el empeño de proteger a los animales. Esta ley regula los principios, deberes, reglas y fines respecto al cuidado, la salud y la utilización de estos individuos para garantizar su bienestar. El Ministerio de Salud Pública del país (MINSAP) dispone de programas de vigilancia, prevención y control de enfermedades zoonóticas, enfocados en aquellas que constituyen un riesgo para la salud. Para cumplir con los objetivos de estos programas se realizan diversas acciones como el monitoreo de la ocurrencia de casos, diagnóstico microbiológico, control de focos, atención médica a las personas, vacunación de grupos de riesgo y poblaciones de animales, educación sanitaria y promoción de salud. \brackcite{Minsap2022Feb}
 
-La promulgación sistemática de leyes que protegen a estos seres vivos y prohíben prácticas violentas e innecesarias en contra de su vida y dignidad, evidencia una tendencia al reconocimiento y la protección normativa del derecho al bienestar de los animales \brackcite{jarrin2021diseno}. Sin lugar a dudas, las personas se hallan cada vez más preocupadas por el cuidado de los mismos; lo cual ha conllevado a la generación de nuevas tecnologías para optimar los servicios de atención a los animales. Es en este punto donde se inscribe el presente trabajo mediante el cual se intenta desarrollar una herramienta para conservar de forma segura y conveniente el historial médico de animales afectivos. Esta herramienta, en forma de aplicación móvil con respaldo de datos en un servidor, será de ayuda tanto a propietarios de mascotas como a médicos veterinarios en la consecución de un mayor bienestar de los animales bajo su cuidado. 
+La promulgación sistemática de leyes que protegen a estos seres vivos y prohíben prácticas violentas e innecesarias en contra de su vida y dignidad, evidencia una tendencia al reconocimiento y la protección normativa del derecho al bienestar de los animales \brackcite{jarrin2021diseno}. Sin lugar a dudas, las personas se hallan cada vez más preocupadas por el cuidado de los mismos; lo cual ha conllevado a la generación de nuevas tecnologías para optimizar los servicios de atención a los animales. Es en este punto donde se inscribe el presente trabajo mediante el cual se intenta desarrollar una herramienta para conservar de forma segura y conveniente el historial médico de animales afectivos. Esta herramienta, en forma de aplicación móvil con respaldo de datos en un servidor, será de ayuda tanto a propietarios de mascotas como a médicos veterinarios en la consecución de un mayor bienestar de los animales bajo su cuidado. 
 
 
 \subsection*{Motivaci\'on}
@@ -62,9 +62,12 @@ A los dueños y cuidadores de animales domesticables les sería conveniente tene
 \end{itemize}
 
 \subsection*{Hip\'otesis}
-Utilizando el lenguaje de programación C\#, el framework .NET 6 y las herramientas construidas sobre este, se podrá implementar un sistema multiplataforma capaz de realizar las funcionalidades antes mencionadas.
 
 Trabajando sobre la plataforma Flutter a trav\'es de Dart, es posible crear un interfaz de usuario funcional, as\'i como la posibilidad de implementar las capacidades de transmisi\'on de informaci\'on mediante una red local.
+
+Utilizando el lenguaje de programación $C\#$, el framework $.NET$ 6 y las herramientas construidas sobre este, se podrá implementar un sistema multiplataforma que funcione como soporte de las funcionalidades antes mencionadas. Se podrá también crear un mecanismo de interoperabilidad entre los sistemas de Dart y $.NET$ orientado al cumplimiento de estas funcionalidades.
+
+
 
 \subsection*{Objetivos}
 
