--- a/document/MainMatter/Background.tex
+++ b/document/MainMatter/Background.tex
@@ -3,7 +3,7 @@
 
 Actualmente existe una creciente preocupación por el cuidado animal donde la aparición de nuevas tendencias tecnológicas ha permitido el desarrollo de aplicaciones que facilitan no solo el cuidado de las mascotas por sus dueños, sino que hacen mucho más fácil el trabajo de las clínicas veterinarias como el de los profesionales de la salud.
 
-Es así, como se puede observar un aumento de aplicaciones para Android dirigidas a establecimientos veterinarios que consiguen optimizar muchas de las tareas relacionadas con esta actividad permitiendo prestar un mejor servicio por parte de dichos hospitales veterinarios y a su vez ofrecerle suficiente información al dueño de la mascota de manera que pueda tomar la mejor decisión cuando se trata de vigilar la salud del animal y la elección del centro veterinario que mejor lo atienda.
+Es así, como se puede observar un aumento de aplicaciones para Android dirigidas a establecimientos veterinarios que consiguen optimizar muchas de las tareas relacionadas con esta actividad permitiendo prestar un mejor servicio por parte de dichos clínicas veterinarios y a su vez ofrecerle suficiente información al dueño de la mascota de manera que pueda tomar la mejor decisión cuando se trata de vigilar la salud del animal y la elección del centro veterinario que mejor lo atienda.
 
 En este capítulo se estudiará en que consisten las historias clínicas y que papel juegan dentro de la medicina veterinaria. Además, se analizarán algunas de las aplicaciones que en la actualidad tienen funcionalidades similares a las que se plantean en este documento para ser implementadas en el producto final. Así como las prestaciones de algunas de las aplicaciones encontradas que han sido desarrolladas en nuestro país en favor del bienestar animal. Luego de esto se estudian las posibilidades para la construcción del software en cuestión, decidiéndose una plataforma de desarrollo de aplicaciones móviles y un modelo de base de datos para almacenar los datos de manera local.\newpage
 
@@ -81,14 +81,14 @@ Por ende, la historia clínica veterinaria constituye un documento único confid
 \subsection{Web del Registro Cubano de Mascotas (RCM)}\label{chapter:introduction}
 
 
-\begin{figure}[h!]
-\begin{center}
-\includegraphics[scale=0.4]{Graphics/images/LogodelRegistroCubanodeMascotas.jpg}
-\caption{Logo del Registro Cubano de Mascotas}
-\label{fig:rcm}
+%\begin{figure}[h!]
+%\begin{center}
+%\includegraphics[scale=0.4]{Graphics/images/LogodelRegistroCubanodeMascotas.jpg}
+%\caption{Logo del Registro Cubano de Mascotas}
+%\label{fig:rcm}
 
-\end{center}
-\end{figure}
+%\end{center}
+%\end{figure}
 
 
 Luego de más de 30 años de lucha finalmente Cuba aprueba un Proyecto de Ley sobre protección animal que busca defender los derechos de animales silvestres, de granja y de compañía. Los animales de granja y silvestres tienen derechos y una connotación legal y ética, pero no social. En cambio, los de compañía si pueden y deben entrar en este grupo por su vinculación estrecha al dueño, su familia y el entorno comunitario. Desde esta perspectiva se hace obligatorio que la mascota sea identificada oficialmente y cambiar su estatus de objeto a sujeto. En una reunión efectuada en marzo de 2006 en el Consejo Científico Veterinario de la Habana algunos médicos, técnicos y estudiantes veterinarios abogaron por realizar un estudio para un registro de las mascotas a través de una intranet del Instituto de Medicina Veterinaria. Su objetivo era poder acceder a los datos de las mascotas desde cualquier lugar del país.
@@ -105,14 +105,14 @@ Hasta agosto de 2021, estaban oficialmente registrados en la plataforma alrededo
 
 \subsection{BACuba}\label{chapter:introduction}
 
-\begin{figure}[h!]
-\begin{center}
-\includegraphics[scale=0.09]{Graphics/images/LogodeBienestarAnimalenCuba.png}
-\caption{Logo de Bienestar Animal en Cuba}
-\label{fig:bac}
+%\begin{figure}[h!]
+%\begin{center}
+%\includegraphics[scale=0.09]{Graphics/images/LogodeBienestarAnimalenCuba.png}
+%\caption{Logo de Bienestar Animal en Cuba}
+%\label{fig:bac}
 
-\end{center}
-\end{figure}
+%\end{center}
+%\end{figure}
 
 \textbf{ BACuba}\brackcite{apMov} \brackcite{cubDis} es una aplicación para teléfonos móviles que tiene como fin lograr el bienestar animal y sensibilizar a las personas para la protección de estos seres vivos. Dicha aplicación es una iniciativa de la organización \textbf{Bienestar Animal Cuba}\brackcite{pOBAC}, la mayor red de voluntarios para la protección animal. Fue lanzada desde el pasado 19 de enero de 2022, y se basa en el principio que rige la organización: rescatar animales abandonados y brindarles todos los cuidados. También buscan promover campañas, actividades, ferias y spots para garantizar el bienestar animal. Esta novedosa aplicación posee varias utilidades separadas en varias secciones:
 
@@ -139,14 +139,14 @@ Información general de BACuba:
 
 \subsection{Dog Health}\label{chapter:introduction}
 
-\begin{figure}[h!]
-\begin{center}
-\includegraphics[scale=0.12]{Graphics/images/LogodeDogHealth.png}
-\caption{Logo de Dog Health}
-\label{fig:dh}
+%\begin{figure}[h!]
+%\begin{center}
+%\includegraphics[scale=0.12]{Graphics/images/LogodeDogHealth.png}
+%\caption{Logo de Dog Health}
+%\label{fig:dh}
 
-\end{center}
-\end{figure}
+%\end{center}
+%\end{figure}
 
 
 \textbf{Dog Health}\brackcite{dogHe} es una aplicación totalmente gratuita para móviles y tablets, fue creada por un comunicador italiano, por lo que está solo disponible en el idioma inglés. Creada para llevar el registro veterinario de nuestras mascotas en Android. Dentro de sus principales prestaciones se encuentran:
@@ -170,14 +170,14 @@ Información general de BACuba:
 
 \subsection{Pet Soft}\label{chapter:introduction}
 
-\begin{figure}[h!]
-\begin{center}
-\includegraphics[scale=0.5]{Graphics/images/LogodePetSoft.png}
-\caption{Logo de Pet Soft}
-\label{fig:dh}
+%\begin{figure}[h!]
+%\begin{center}
+%\includegraphics[scale=0.5]{Graphics/images/LogodePetSoft.png}
+%\caption{Logo de Pet Soft}
+%\label{fig:dh}
 
-\end{center}
-\end{figure}
+%\end{center}
+%\end{figure}
 
 
 \textbf{ Pet Soft}\brackcite{sofVet} \brackcite{petSo} es una plataforma para veterinarias y dueños de mascotas creada para almacenar y gestionar agendamientos con todo lo relacionado del paciente estableciendo citas, vacunas y todo tipo de información detallada con el fin de contar con un completo historial médico que le permita no solo al profesional veterinario, sino a los dueños de las mascotas acceder de manera segura a la información completa del animal. Esta plataforma es completamente web y la aplicación se puede descargar desde cualquier dispositivo con sistema operativo Android o IOS.
@@ -229,7 +229,7 @@ Entre sus principales características se encuentran:
 
 \subsection{VitusVet}\label{chapter:introduction}
 
-\textbf{VitusVet} \brackcite{vitPet} es un $software$ de administración de prácticas veterinarias que permite a veterinarios y hospitales manejar el flujo de trabajo, comunicaciones con clientes, pagos, historias clínicas, horarios de consultas, entre otros. Permite el envío y recibimiento de texto, imágenes y actualizaciones en tiempo real.
+\textbf{VitusVet} \brackcite{vitPet} es un $software$ de administración de prácticas veterinarias que permite a veterinarios y clínicas manejar el flujo de trabajo, comunicaciones con clientes, pagos, historias clínicas, horarios de consultas, entre otros. Permite el envío y recibimiento de texto, imágenes y actualizaciones en tiempo real.
 
 Usando aplicaciones móviles de $VitusVet$ múltiples veterinarios pueden compartir historias clínicas de mascotas con clientes y hacer recordatorios sobre encuentros futuros. La plataforma $VitusPay$ permite a los dueños de mascota realizar pagos mensuales a través de tarjetas de crédito. Los clientes pueden pedir consultas con los veterinarios a través de mensajes de texto, emails, plataformas de redes sociales y aplicaciones móviles. El $software$ permite a veterinarios configurar y automatizar respuestas basándose en el personal disponible, horario de trabajo, días feriados y enviar recordatorios a través de postales personalizadas. 
 
@@ -244,7 +244,10 @@ En esta sección se analizaron aplicaciones con similitudes a la que se plantea 
 \begin{enumerate}
 
 
-\item	En general las herramientas en esta sección permiten la creación y el manejo de las historias clínicas digitales para nuestras mascotas, pero como se observó en cada caso estas no brindan la posibilidad para exportar de manera offline los datos de las mascotas que queramos compartir con otro usuario. Entre los objetivos de este trabajo está la mejora de este aspecto.
+\item	En general las herramientas en esta sección permiten la creación y el manejo de las historias clínicas digitales para nuestras mascotas, pero como se observó en cada caso estas no brindan la posibilidad para exportar de manera offline\footnote{La tranferencia de datos offline en $Android$ refiere a una forma de enviar datos de forma inalámbrica sin necesidad de conexión a Internet, existen varias tecnologías que permiten este tipo de transferencia como $Wifi$ $Direct$, $Bluetooth$, $SIP$, etc.} \brackcite{offDT} los datos de las mascotas que queramos compartir con otro usuario. Entre los objetivos de este trabajo está la mejora de este aspecto.
+
+
+
 \item	Pocas de estas aplicaciones permiten al usuario consultar los datos de sus mascotas sin la necesidad de una conexión a Internet, aspecto que goza de gran peso entre los principales objetivos de este trabajo.
 \item	Las herramientas para el manejo de las historias clínicas desde un dispositivo móvil, permiten a los usuarios ya sean médicos veterinarios o dueños y encargados de las mascotas acceder de manera sencilla y segura a toda la información referente al estado de salud, seguimiento, y cuidado del animal.
 \item	Luego de analizar las aplicaciones anteriores se concluye como necesario el diseño de una aplicación que si cumpla con los requerimientos expuestos en este documento, porque en general estas aplicaciones no permiten el trabajo con historias clínicas animales de manera offline, aspecto de vital importancia debido a las limitaciones de la conexión a Internet que presenta nuestro país.
@@ -252,18 +255,24 @@ En esta sección se analizaron aplicaciones con similitudes a la que se plantea 
 
 \section{Tecnologías para el desarrollo de aplicaciones móviles}\label{chapter:introduction}
 
+\subsection{Programación Nativa de Android : Java y Kotlin}\label{chapter:introduction}
+
+El desarrollo de aplicaciones nativas es una opción increíble para ofrecer a los usuarios la experiencia más satisfactoria en términos de la sensación y la apariencia de su aplicación. 
+
+
+
 \subsection{React Native}\label{chapter:introduction}
 
 
 
-\begin{figure}[h!]
-\begin{center}
-\includegraphics[scale=0.5]{Graphics/images/LogodeReactNative.jpg}
-\caption{Logo de React Native}
-\label{fig:dh}
+%\begin{figure}[h!]
+%\begin{center}
+%\includegraphics[scale=0.5]{Graphics/images/LogodeReactNative.jpg}
+%\caption{Logo de React Native}
+%\label{fig:dh}
 
-\end{center}
-\end{figure}
+%\end{center}
+%\end{figure}
 
 
 \textbf{React Native}\brackcite{reaNative} es un framework que permite construir aplicaciones móviles nativas, para iOS y Android (así como también para Android TV, macOS, tvOS, Windows y UWP\footnote{Universal Windows Platform}  , aunque nos enfocaremos en los dos gigantes de la telefonía móvil), utilizando solamente JavaScript y React.
@@ -298,17 +307,42 @@ Desventajas
 \item La documentación es deficiente para algunos casos, producto a la misma velocidad con que se realizan actualizaciones, muchos colaboradores no consideran necesaria su documentación sobre la marcha.
 \end{enumerate}
 
+
+
+\subsection{Xamarin}\label{chapter:introduction}
+
+\textbf{Xamarin} \brackcite{xama} es un kit de herramientas de desarrollo de aplicaciones multiplataforma que nos permite producir aplicaciones nativas de $Android$, $iOS$, $tvOS$, $watchOS$, $macOS$ y $Windows$ con $UI$ unificadas, siendo parte en la actualidad de la plataforma de desarrollo $.NET$  \footnote{$.NET$ es una plataforma de desarrollo compuesta por herramientas, lenguajes de programación y bibliotecas para crear muchos tipos diferentes de aplicaciones.} \brackcite{net}. Fue en sus inicios construida como herramienta por los desarrolladores de Mono \footnote{Mono es una plataforma de desarrollo de código abierto basada en .NET Framework, dirigida por Miguel de Icaza y presentada por primera vez en 2001}  y siendo fundada como compañía homónima el 16 de mayo del 2011, para ser adquirida en el 2016 por Microsoft.
+Fue para cuando Microsoft adaptó el $Kit$ de Desarrollo de Software ($SDK$) \footnote{Un $kit$ de desarrollo de software ($SDK$) es un conjunto de herramientas proporcionado usualmente por el fabricante de una plataforma de $hardware$, un sistema operativo o un lenguaje de programación.} de Xamarin a sus políticas de código abierto como hizo con $.NET$, que se convirtió en parte del entorno de desarrollo integrado de Xamarin Visual Studio lo cual le dio gran aceptación dentro del mundo de desarrolladores $.NET$.
+
+Xamarin requiere de un solo lenguaje para desarrollar aplicaciones para las distintas plataformas, ese lenguaje es $C\#$. Los proyectos con Xamarin compilan de forma nativa, lo que lo convierte en una opción para crear aplicaciones con un alto rendimiento y con un aspecto nativo. Estas aplicaciones a menudo se comparan con las nativas para las plataformas de desarrollo móvil $iOS$ y $Android$ en términos de rendimiento y experiencia del usuario. En las aplicaciones desarrolladas con Xamarin el código relacionado a la lógica de negocios, el manejo de la Base de datos y el acceso a la red puede ser compartido entre todas las plataformas y a su vez permitir desarrollar una capa de interfaz de usuario diferenciada para cada plataforma, permitiendo que las aplicaciones compiladas de esta manera, se vean de forma nativa.
+Con Xamarin se puede desarrollar en $Windows$ o $Mac$ y compilarse en paquetes de aplicaciones nativas, como un archivo $.apk$ en Android o uno $.ipa$ en $iOS$.
+
+Ventajas:
+
+\begin{itemize}
+
+
+\item	Se encuentra embebido en el ecosistema de $.NET$ $Framework$, con todas las facilidades de Visual Studio concentrando todas las herramientas que eran accesibles desde Xamarin Studio junto con todo lo necesario para el trabajo con $C\#$ y más, de forma gratuita.
+\item	Xamarin tiene una documentación bien estructurada que incluye casos, fragmentos y tutoriales paso a paso.
+\item	El desarrollo multiplataforma de Xamarin requiere aproximadamente 1,5 veces menos tiempo (y dinero) que el desarrollo de un proyecto nativo independiente para cada plataforma.
+\item	Las aplicaciones que se construyen en Xamarin nos darán un mejor rendimiento y mejorarán constantemente para que coincidan con los estándares de desarrollo nativo. A diferencia de las soluciones híbridas tradicionales, basadas en las tecnologías web, una aplicación multiplataforma desarrollada con Xamarin puede clasificarse como nativa en términos de rendimiento.
+\item	Permite crear experiencias visuales completamente nativas. Incluso por herramientas asociadas como Xamarin.Forms convierte los componentes de la interfaz de usuario de la aplicación en elementos propios de la plataforma en tiempo de ejecución. Esta última, disminuyendo el tiempo de desarrollo sustancialmente pero con sacrificios leves en el rendimiento debido a la capa de abstracción adicional.
+\item	Xamarin $SDK$, que incluye tiempo de ejecución, bibliotecas y herramientas de línea de comandos, pasa a ser de código abierto, estando disponible para todos bajo la licencia $MIT$  como parte de Visual Studio a partir de febrero de 2016, lo que acelera el crecimiento de la plataforma.
+
+\end{itemize}
+
+
 \subsection{Flutter}\label{chapter:introduction}
 
 
-\begin{figure}[h!]
-\begin{center}
-\includegraphics[scale=0.5]{Graphics/images/LogodeFlutter.jpg}
-\caption{Logo de Flutter}
-\label{fig:dh}
+%\begin{figure}[h!]
+%\begin{center}
+%\includegraphics[scale=0.5]{Graphics/images/LogodeFlutter.jpg}
+%\caption{Logo de Flutter}
+%\label{fig:dh}
 
-\end{center}
-\end{figure}
+%\end{center}
+%\end{figure}
 
 
 \textbf{Flutter} \brackcite{flu} es un conjunto de herramientas de interfaz de usuario multiplataforma que está diseñado para permitir la reutilización de código en sistemas operativos como iOS y Android, al mismo tiempo que permite que las aplicaciones interactúen directamente con los servicios de la plataforma subyacente. El objetivo es permitir que los desarrolladores entreguen aplicaciones de alto rendimiento que se sientan naturales en diferentes plataformas, adoptando las diferencias donde existen mientras comparten la mayor cantidad de códigos posibles.
@@ -370,20 +404,20 @@ Las bases de datos para Android deben ser:
 \item	Requerir poca memoria y consumo de energía.
 \end{itemize}
 
-Existen muchas bases de datos para Android y móviles en el mercado, pero no todas satisfacen todos los requisitos mencionados en este artículo. Vamos a discutir algunas de las bases de datos más populares para aplicaciones móviles y tratar de resaltar sus características, pros y contras.
+Existen muchas bases de datos para Android y móviles en el mercado, pero no todas satisfacen todos los requisitos mencionados en este Trabajo. Vamos a discutir algunas de las bases de datos más populares para aplicaciones móviles y tratar de resaltar sus características, pros y contras.
 
 \subsection{Berkeley DB}\label{chapter:introduction}
 
 
 
-\begin{figure}[h!]
-\begin{center}
-\includegraphics[scale=0.5]{Graphics/images/LogodeBerkeleyDB.jpg}
-\caption{Logo de BerkeleyDB}
-\label{fig:bdb}
+%\begin{figure}[h!]
+%\begin{center}
+%\includegraphics[scale=0.5]{Graphics/images/LogodeBerkeleyDB.jpg}
+%\caption{Logo de BerkeleyDB}
+%\label{fig:bdb}
 
-\end{center}
-\end{figure}
+%\end{center}
+%\end{figure}
 
 
 \textbf{ Berkeley DB (BDB)}\brackcite{orBer} es una biblioteca de software destinada a proporcionar una base de datos integrada de alto rendimiento para datos clave/valor. Berkeley DB está escrito en C con enlaces API para C++ , $C\#$ , Java , Perl , PHP , Python , Ruby , Smalltalk , Tcl y muchos otros lenguajes de programación. BDB almacena pares de clave/datos arbitrarios como matrices de bytes y admite varios elementos de datos para una sola clave. Berkeley DB no es una base de datos relacional, aunque tiene funciones de base de datos avanzadas que incluyen transacciones de base de datos, control de concurrencia multiversión y registro de escritura anticipada.
@@ -405,28 +439,50 @@ Entre sus principales características se encuentran:
 \item	No soporta SQL ni esquemas. A pesar de esto tiene un tamaño superior al de otras alternativas incrustadas (ocupa casi el doble que SQLite).
 \end{itemize}
 
+
+\subsection{Couchbase Lite}\label{chapter:introduction}
+
+
+\textbf{Couchbase Lite}\brackcite{cblite} es un motor de base de datos sincronizable, liviano, orientado a documentos ($NoSQL$) integrado. Al estilo de Couchbase Server maneja documentos $JSON$ y tiene el mismo mapa/reducción que este en una edición pequeña. Está escrito en $Objective-C$ y $C++$ y se requiere $Xcode$ $7$ o posterior para construirlo. Couchbase Lite compila de forma nativa para $iOS$, $Android$, $Mac OS$ y $.NET$. Medio megabyte optimizado, para un inicio rápido y una experiencia de usuario ágil en dispositivos conectados ocasionalmente cuando los datos importan.
+
+Entre sus principales características se encuentran: 
+\begin{itemize}
+
+
+\item	Es integrado; el motor de la base de datos es una biblioteca vinculada a la aplicación, no un proceso de servidor independiente.
+\item	Tamaño de código pequeño, actualmente menos de $600$ kbytes. 
+\item	Bajo uso de memoria con conjuntos de datos móviles típicos. La expectativa es que la cantidad de documentos no sea enorme, aunque puede haber archivos adjuntos multimedia considerables.
+\item	Al igual que Couchbase Server, almacena registros en formato $JSON$ flexible en lugar de requerir esquemas predefinidos o normalización.
+\item	Los registros/documentos pueden tener archivos adjuntos binarios de tamaño arbitrario, como contenido multimedia.
+\item	El formato de datos de su aplicación puede evolucionar con el tiempo sin necesidad de migraciones explícitas.
+\item	Mapear/reducir el indexado permite búsquedas rápidas sin necesidad de utilizar lenguajes de consulta especiales.
+\item	El motor de sincronización admite conexiones de red intermitentes y poco fiables.
+\item	Las $API$ nativas son $Objective-C$ ($iOS$, $tvOS$, $Mac$), $Java$ ($Android$) y $C\#$ ($.NET$, Xamarin); pero un adaptador $API$ $REST$ interno opcional permite llamarlo desde otros lenguajes como JavaScript, para usar en aplicaciones creadas con PhoneGap/Cordova o Titanium.
+
+\end{itemize}
+
 \subsection{SQLite}\label{chapter:introduction}
 
 
 
-\begin{figure}[h!]
-\begin{center}
-\includegraphics[scale=0.08]{Graphics/images/LogodeSQLite.png}
-\caption{Logo de SQLite}
-\label{fig:sql}
+%\begin{figure}[h!]
+%\begin{center}
+%\includegraphics[scale=0.08]{Graphics/images/LogodeSQLite.png}
+%\caption{Logo de SQLite}
+%\label{fig:sql}
 
-\end{center}
-\end{figure}
+%\end{center}
+%\end{figure}
 
 
-\textbf{SQLite} \brackcite{sqli} es una biblioteca en proceso que implementa un motor de base de datos SQL transaccional autónomo, sin servidor y sin configuración. El código de SQLite es de dominio público y, por lo tanto, es de uso gratuito para cualquier propósito, comercial o privado. SQLite es la base de datos más implementada en el mundo con más aplicaciones de las que podemos contar, incluidos varios proyectos de alto perfil. A diferencia de la mayoría de las otras bases de datos SQL, SQLite no tiene un proceso de servidor separado. SQLite lee y escribe directamente en archivos de disco ordinarios. Una base de datos SQL completa con varias tablas, índices, disparadores y vistas está contenida en un solo archivo de disco. El formato de archivo de la base de datos es multiplataforma: puede copiar libremente una base de datos entre sistemas de 32 y 64 bits o entre arquitecturas big-endian y little-endian. Estas características hacen de SQLite una opción popular como formato de archivo de aplicación. 
+\textbf{SQLite} \brackcite{sqli} es una biblioteca en proceso que implementa un motor de base de datos SQL transaccional autónomo, sin servidor y sin configuración. El código de SQLite es de dominio público y, por lo tanto, es de uso gratuito para cualquier propósito, comercial o privado. SQLite es la base de datos más implementada en el mundo con más aplicaciones de las que podemos contar, incluidos varios proyectos de alto perfil. A diferencia de la mayoría de las otras bases de datos SQL, SQLite no tiene un proceso de servidor separado. SQLite lee y escribe directamente en archivos de disco ordinarios. Una base de datos SQL completa con varias tablas, índices, $triggers $(disparadores) y vistas está contenida en un solo archivo de disco. El formato de archivo de la base de datos es multiplataforma: puede copiar libremente una base de datos entre sistemas de 32 y 64 bits o entre arquitecturas big-endian y little-endian. Estas características hacen de SQLite una opción popular como formato de archivo de aplicación. 
 
 El código base de SQLite cuenta con el respaldo de un equipo internacional de desarrolladores que trabajan en SQLite a tiempo completo. Los desarrolladores continúan expandiendo las capacidades de SQLite y mejorando su confiabilidad y rendimiento mientras mantienen la compatibilidad con las especificaciones de interfaz publicadas, la sintaxis SQL y el formato de archivo de la base de datos. El código fuente es absolutamente gratuito para cualquiera que lo desee, pero también hay soporte profesional disponible. El proyecto SQLite se inició el 9 de mayo del 2000. El futuro siempre es difícil de predecir, pero la intención de los desarrolladores es admitir SQLite hasta el año 2050. Las decisiones de diseño se toman con ese objetivo en mente.
 
 Entre sus principales características se encuentran:
 \begin{itemize}
 
-\item	Las transacciones son atómicas, consistentes, aisladas y duraderas (ACID) incluso después de fallas del sistema y fallas de energía.
+\item	Las transacciones son atómicas, consistentes, aisladas y duraderas (ACID)\footnote{$ACID$ es un conjunto de propiedades de las transacciones de base de datos que tienen como propósito garantizar la validez de los datos a pesar de posibles errores, fallos de energía u otros problemas que pueden surgir} incluso después de fallas del sistema y fallas de energía.
 \item	No se necesita configuración ni administración.
 \item	Implementación completa de SQL con capacidades avanzadas como índices parciales, índices en expresiones, JSON, expresiones de tablas comunes y funciones de ventana.
 \item	Una base de datos completa se almacena en un único archivo de disco multiplataforma. Ideal para usar como formato de archivo de aplicación.
@@ -442,7 +498,7 @@ Entre sus principales características se encuentran:
 
 \subsection{Conclusiones sobre las bibliotecas mostradas}\label{chapter:introduction}
 
-Luego de analizar las características que presentan las bibliotecas antes mencionadas para la creación y el manejo de las bases de datos. Así como las ventajas y desventajas que presentan las bases de datos relacionales y no relacionales, y las características que deben tener las bases de datos para Android, \textbf{se decidió por SQLite}.
+Luego de analizar las características que presentan las bibliotecas antes mencionadas para la creación y el manejo de las bases de datos. Así cómo sus ventajas y desventajas propias de las bases de datos relacionales y no relacionales, y las características que deben tener las bases de datos para Android, \textbf{se decidió por SQLite}.
 
 $SQLite$ permite que el desarrollo sea más simple. Los paquetes android.database y android.database.sqlite ofrecen una alternativa de mayor rendimiento donde la compatibilidad de la fuente no representa mayor problema, aprovechando los recursos. Es ideal para consultar y almacenar datos de forma estructurada. La aplicación solo tiene que cargar tantos datos como necesite, en lugar de leer todo el archivo de la aplicación y mantener un análisis completo en la memoria, por ende, el tiempo de inicio y el consumo de memoria se reducen. El contenido se actualiza de forma continua y atómica, para que no se pierda el trabajo en caso de una falla de energía o algún bloqueo. Se puede acceder al contenido y actualizarlo mediante potentes consultas SQL, lo que reduce en gran medida la complejidad del código de la aplicación. Además, una gran cantidad de programas, escritos en diferentes lenguajes de programación, puede acceder al mismo archivo de aplicación sin problemas de compatibilidad.
 
