--- a/document/BackMatter/Recomendations.tex
+++ b/document/BackMatter/Recomendations.tex
@@ -11,5 +11,7 @@
 \item Añadir la opción de modificar los datos de una mascota y/o los de una consulta previamente existente.
 
 \item Implementar un sistema de citas controlado por el servidor para que los médicos veterinarios tengan un espacio para coordinar las consultas con los clientes.
+
+\item Implementar un sistema de avisos y alarmas que indiquen al usuario sobre las visitas pre-programadas al veterinario y/o el horario de darle una medicina a su mascota.
 \end{enumerate}
 \end{recomendations}
