--- a/document/MainMatter/Background.tex
+++ b/document/MainMatter/Background.tex
@@ -332,6 +332,17 @@ Ventajas:
 \end{itemize}
 
 
+Desventajas:
+
+\begin{itemize}
+
+
+\item	Dependiendo del proyecto las aplicaciones desarrolladas por esta tecnología tienden a ocupar más espacio en memoria. Para ilustrar lo anterior una aplicación de Hola Mundo desarrollada con Xamarin para Android puede alcanzar los $16$ MB, en su estado puro, sin paquetes adicionales, mientras que la desarrollada de forma nativa puede ser menor a los $3$ MB.
+\item	Puede haber trabas al integrar recursos de terceros con la aplicación en Xamarin. Aunque la mayoría de las herramientas y bibliotecas ofrecen soporte completo para tecnologías nativas, es posible que un proveedor no brinde soporte de Xamarin. Siempre existe la posibilidad de que necesite una capacidad o integración específica dentro de su aplicación que no sea proporcionada por la plataforma o su tienda de componentes.
+\item	A pesar del tiempo en el mercado Xamarin.IOS, Xamarin.Android e incluso Xamarin.Forms se le presentan quejas sobre estabilidad, errores y fallas. Principalmente Xamarin.Forms que es más usado por su posibilidad de ahorrar tiempo creando prototipos y aprovechar al máximo el código compartido. Algunos desarrolladores se muestran inconformes afirmando que, en lugar de ahorrar tiempo con el uso compartido de código, puede terminar empleando más tiempo resolviendo problemas.
+\end{itemize}																																																																																																																																																																																																																																																																																					
+
+
 \subsection{Flutter}\label{chapter:introduction}
 
 
@@ -374,9 +385,9 @@ Desventajas
 
 \subsection{Conclusiones sobre las plataformas mostradas}\label{chapter:introduction}
 
-La comparación está bastante equiparada, para el caso de React Native cuenta con una amplia comunidad, gran número de paquetes y posee un buen rendimiento, pero un motor gráfico aún deficiente y carece de fluidez para las animaciones más simples. Mientras Flutter a pesar de poseer una comunidad aún pequeña en comparación con React Native, es cooperativa y esta creciendo en una magnitud superior a la de React Native.
+La comparación está bastante equiparada, para el caso de React Native cuenta con una amplia comunidad, gran número de paquetes y posee un buen rendimiento, pero un motor gráfico aún deficiente y carece de fluidez para las animaciones más simples. Mientras Flutter a pesar de poseer una comunidad aún pequeña en comparación con React Native o Xamarin, es cooperativa y esta creciendo en una magnitud superior a la de ambas.
 
-Flutter llega para suplir, con creces, las deficiencias de React Native respecto al apartado gráfico, con una excelente documentación y un lenguaje de programación que aunque no es tan conocido como JavaScript, es muy poderoso y cuenta con una sintaxis similar a la de Java y $C\#$. Con aplicaciones optimizadas para ocupar menos espacio, donde a pesar no ser rivales para las desarrolladas de forma nativa, supera a la competencia en ese aspecto.
+Flutter llega para suplir, con creces, las deficiencias de React Native respecto al apartado gráfico y los problemas de estabilidad que padece Xamarin, con una excelente documentación y un lenguaje de programación que aunque no es tan conocido como JavaScript, es muy poderoso y cuenta con una sintaxis similar a la de Java y $C\#$. Con aplicaciones optimizadas para ocupar menos espacio, donde a pesar no ser rivales para las desarrolladas de forma nativa, supera a la competencia en ese aspecto.
 
 Luego de todo lo expuesto, sumado a la experiencia previa que se posee en el uso de \textbf{Flutter} para el desarrollo multiplataforma,\textbf{ fue seleccionado para implementar la aplicación} que concluirá este trabajo.
 
