--- a/document/Bibliography.bib
+++ b/document/Bibliography.bib
@@ -637,3 +637,12 @@ title = {Software Architecture Patterns},
 	note = {[Online; accessed 1. sep. 2022]},
 	url = {https://www.tothenew.com/blog/offline-data-transfer-in-android}
 }
+
+@misc{java1,
+	title = {Sitio oficial de Java},
+	journal = {HC},
+	year = {2022},
+	month = oct,
+	note = {[Online; accessed 1. sep. 2022]},
+	url = { https://www.java.com/es}
+}
