--- a/document/Thesis.tex
+++ b/document/Thesis.tex
@@ -56,7 +56,7 @@
 \title{HCVet: Aplicación móvil para historia clínica veterinaria}
 \author{\\\vspace{0.2cm}David Campanería Cisneros\\\vspace{0.1cm} Dayron Fernández Acosta\\\vspace{0.2cm} Pablo Adrián Fuentes González}
 \advisor{\\\vspace{0.25cm}Alejandro Mesejo\\\vspace{0.2cm}Jos\'e L. Castañeda}
-\degree{Licenciado en Ciencia de la Computación}
+\degree{Licenciado en Ciencia de la Computación)}
 \faculty{Facultad de Matemática y Computación}
 \date{17 de octubre, 2022 \\\vspace{0.25cm}\href{}{}}
 \logo{Graphics/uhlogo.pdf}
