--- a/document/MainMatter/Background.tex
+++ b/document/MainMatter/Background.tex
@@ -284,7 +284,7 @@ Ventajas de Kotlin:
 
 \begin{itemize}
 \item Las construcciones son más concisas, por lo cual se escriben menos líneas del código.
-\item otlin cuenta con funciones de extensión. Se permite que los desarrolladores agreguen métodos a clases sin hacer cambios en el código.
+\item Kotlin cuenta con funciones de extensión. Se permite que los desarrolladores agreguen métodos a clases sin hacer cambios en el código.
 \item Las corrutinas se basan en conceptos de otros lenguajes, lo cual simplifica la gestión de las tareas.
 \end{itemize}
 
