--- a/document/Thesis.tex
+++ b/document/Thesis.tex
@@ -80,7 +80,7 @@
 \begin{document}
 \frontmatter
 \maketitle
-\include{FrontMatter/Dedication}
+%\include{FrontMatter/Dedication}
 \include{FrontMatter/Thanks}
 \include{FrontMatter/Abstract}
 \include{FrontMatter/Contents}
