--- a/Thesis presentation/Thesis Presentation.tex
+++ b/Thesis presentation/Thesis Presentation.tex
@@ -128,16 +128,20 @@ Componentes:
 \end{frame}
 
 \begin{frame}
-\frametitle{Componente de comunicacion con el servidor.}
+\frametitle{Componente de comunicación con el servidor.}
 
-\textbf{COMPLETAR}
+\begin{block}{}
+Se establece comunicación con el servidor a través del protocolo HTTPS.
+\end{block}
 \footnote{David}
 \end{frame}
 
 \begin{frame}
 \frametitle{Componente de transferencia de datos offline.}
 
-\textbf{COMPLETAR}
+\begin{block}{}
+En la implementación de este componente fue utilizado Kotlin para hacer uso del API WifiP2pManager de Android.
+\end{block}
 \footnote{David}
 \end{frame}
 
