--- a/Thesis presentation/Thesis Presentation.tex
+++ b/Thesis presentation/Thesis Presentation.tex
@@ -73,8 +73,7 @@ Razones por las que son necesarias resolver el problema:
 \item Eliminar mascota
 \item Compartir/Recibir mascota
 \item Insertar nueva consulta
-\item Insertar nueva Alergia/Condición/Vacuna:
-\item Insertar notas extras:
+\item Insertar notas extras
 \item Visualización
 \end{itemize}
 \footnote{David}
