--- a/Thesis presentation/Thesis Presentation.tex
+++ b/Thesis presentation/Thesis Presentation.tex
@@ -147,7 +147,19 @@ En la implementación de este componente fue utilizado Kotlin para hacer uso del
 \begin{frame}
 \frametitle{Componente de almacenamiento interno.}
 
-\textbf{COMPLETAR}
+\textbf{Algunos de los métodos proporcionados por el paquete sqflite para el manejo de base de datos SQLite:}
+
+\begin{itemize}
+
+
+\item openDatabase(...)
+\item getDatabasesPath()
+\item execute(...)
+\item insert(...)
+\item update(...)
+\item query(...)
+\item delete(...)
+\end{itemize}
 \footnote{Pablo}
 \end{frame}
 
