--- a/Thesis presentation/Thesis Presentation.tex
+++ b/Thesis presentation/Thesis Presentation.tex
@@ -164,13 +164,31 @@ En la implementación de este componente fue utilizado Kotlin para hacer uso del
 
 \begin{frame}
 \frametitle{Estructura de View}
-\textbf{COMPLETAR}
+Los 5 principios utilizados para el diseño de la interfaz:
+\begin{itemize}
+\item Simplicidad
+\item Eficiencia
+\item Consistencia
+\item Retroalimentación (Feedback)
+\item Accesibilidad
+\end{itemize}
 \footnote{Dayron}
 \end{frame}
 
 \begin{frame}
 \frametitle{Estructura de View}
-\textbf{COMPLETAR}
+Las dos aproximaciones utilizadas para el diseño:
+
+\begin{columns}
+\begin{column}{0.5\textwidth}
+\textbf{Menu-driven interface}
+FOTO DEL HOMEPAGE DE LA APP
+\end{column}
+\begin{column}{0.5\textwidth}
+\textbf{Form-based interface}
+FOTO DE UN FORMULARIO DE LA HC
+\end{column}
+\end{columns}
 \footnote{Dayron}
 \end{frame}
 
