updating the view and the db model

--- a/Thesis presentation/Thesis Presentation.tex
+++ b/Thesis presentation/Thesis Presentation.tex
@@ -168,7 +168,11 @@ En la implementación de este componente fue utilizado Kotlin para hacer uso del
 \begin{frame}
 \frametitle{Modelo de Datos}
 
-\textbf{COMPLETAR}
+\begin{center}
+
+\includegraphics[scale =0.35]{Images/symplifiedClass.jpg}
+
+\end{center}
 
 \footnote{Pablo}
 \end{frame}
@@ -194,11 +198,19 @@ Las dos aproximaciones utilizadas para el diseño:
 \begin{columns}
 \begin{column}{0.5\textwidth}
 \textbf{Menu-driven interface}
-FOTO DEL HOMEPAGE DE LA APP
+\begin{center}
+
+\includegraphics[scale = 0.12]{Images/homePage.jpg}
+
+\end{center}
 \end{column}
 \begin{column}{0.5\textwidth}
 \textbf{Form-based interface}
-FOTO DE UN FORMULARIO DE LA HC
+\begin{center}
+
+\includegraphics[scale = 0.12]{Images/form.jpg}
+
+\end{center}
 \end{column}
 \end{columns}
 \footnote{Dayron}
@@ -207,7 +219,10 @@ FOTO DE UN FORMULARIO DE LA HC
 
 \begin{frame}
 \frametitle{Estructura de View-Model}
-\textbf{COMPLETAR}
+
+
+
+
 \footnote{Dayron}
 \end{frame}
 
