--- a/Thesis presentation/Thesis Presentation.tex
+++ b/Thesis presentation/Thesis Presentation.tex
@@ -306,5 +306,37 @@ Aparente contradicción entre la selección de una tecnología en la hipótesis 
 \end{frame}
 
 
+\begin{frame}
+\frametitle{Segunda pregunta del oponente}
+\begin{block}{Pregunta 2}
+¿Han considerado la idea de incluir fotos e inlcuso videos del comportamiento del animal como parte de la historia, pensando en futuras comparaciones visuales por parte de los profesionales al consultarlos?
+\end{block}
+\end{frame}
+
+
+
+
+\begin{frame}
+\frametitle{Primeros diseños de la aplicaión(7/2022)}
+
+
+\begin{columns}
+\begin{column}{0.5\textwidth}
+\begin{center}
+
+\includegraphics[scale = 0.35]{Images/photoExample.png}
+
+\end{center}
+\end{column}
+\begin{column}{0.5\textwidth}
+\begin{center}
+
+\includegraphics[scale = 0.55]{Images/photoExampleZoom.png}
+
+\end{center}
+\end{column}
+\end{columns}
+
+\end{frame}
 
 \end{document}
