--- a/Thesis presentation/Thesis Presentation.tex
+++ b/Thesis presentation/Thesis Presentation.tex
@@ -201,7 +201,7 @@ Las dos aproximaciones utilizadas para el diseño:
 \textbf{Menu-driven interface}
 \begin{center}
 
-\includegraphics[scale = 0.12]{Images/homePage.jpg}
+\fbox{\includegraphics[scale = 0.12]{Images/homePage.jpg}}
 
 \end{center}
 \end{column}
@@ -209,7 +209,7 @@ Las dos aproximaciones utilizadas para el diseño:
 \textbf{Form-based interface}
 \begin{center}
 
-\includegraphics[scale = 0.12]{Images/form.jpg}
+\fbox{\includegraphics[scale = 0.12]{Images/form.jpg}}
 
 \end{center}
 \end{column}
