update to conclussions

--- a/Thesis presentation/Thesis Presentation.tex
+++ b/Thesis presentation/Thesis Presentation.tex
@@ -235,11 +235,26 @@ Componentes del View-Model:
 \end{frame}
 
 \begin{frame}
-\frametitle{Conclusiones (work - in - progress)}
+\frametitle{Conclusiones}
 \begin{itemize}
-\item Objetivos cumplidos
+\begin{columns}
+\begin{column}{0.5\textwidth}
 
-\item Importancia
+\begin{center}
+
+\fbox{\includegraphics[scale = 0.12]{Images/initialPage.jpg}}
+
+\end{center}
+\end{column}
+\begin{column}{0.5\textwidth}
+
+\begin{center}
+
+\fbox{\includegraphics[scale = 0.12]{Images/pet.jpg}}
+
+\end{center}
+\end{column}
+\end{columns}
 \end{itemize}
 \footnote{Pablo}
 \end{frame}
